--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/packages
+/WebApplication1/bin
+/WebApplication1/obj/Debug
